force-app/main/default/objects/Picklist_value_to_icon_map__mdt/Picklist_value_to_icon_map__mdt.object-meta.xml
<CustomObject>
    <label>Picklist value to icon map</label>
    <pluralLabel>Picklist value to icon maps</pluralLabel>
</CustomObject>