force-app/main/default/objects/Picklist_value_to_icon_map__mdt/fields/Account_name__c.field-meta.xml
<CustomField>
    <fullName>Account_name__c</fullName>
    <label>Account name</label>
    <length>180</length>
    <required>true</required>
    <type>Text</type>
</CustomField>