force-app/main/default/objects/Picklist_value_to_icon_map__mdt/fields/Api_field_name__c.field-meta.xml
<CustomField>
    <fullName>Api_field_name__c</fullName>
    <label>Api field name</label>
    <length>180</length>
    <required>true</required>
    <type>Text</type>
</CustomField>