force-app/main/default/objects/Picklist_value_to_icon_map__mdt/fields/Icon_name__c.field-meta.xml
<CustomField>
    <fullName>Icon_name__c</fullName>
    <label>Icon class</label>
    <length>180</length>
    <required>true</required>
    <type>Text</type>
</CustomField>