force-app/main/default/objects/Picklist_value_to_icon_map__mdt/fields/Picklist_value__c.field-meta.xml
<CustomField>
    <fullName>Picklist_value__c</fullName>
    <label>Picklist value</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>